code/human_written_tests/WebAssembly/processed_control_flow_validation/test_if_37.wast
(assert_invalid
  (module (func $type-then-value-void-vs-num (result i32)
    (if (result i32) (i32.const 1) (then (nop)) (else (i32.const 0)))
  ))
  "type mismatch"
)